--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,8 +1,21 @@
-
-body {
-    background-color: rgb(70, 22, 110);
+* {
+    font-family: 'Poppins', sans-serif;
 }
-
+body {
+    background: linear-gradient(to bottom right, #6C00D8 80%, rgb(131, 33, 208) 20%);
+    overflow-x: hidden;
+}
+.useremail{
+    position: relative; margin-top: 20px;
+    margin-left: 20px;
+    text-decoration: none;
+}
+.useremail .a{
+    text-decoration: none;
+}
+.useremail .a:hover{
+    color: #6C00D8;
+}
 .navpanel {
     background-color: #E3E3E3;
     font-size: 20px;
@@ -33,7 +46,7 @@ body {
 .container {
     background-color: #E3E3E3;
     padding-bottom: 100px;
-
+    border-radius: 15px;
 }
 
 .header {
