--- a/src/main/webapp/css/adminPage.css
+++ b/src/main/webapp/css/adminPage.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url("https://images8.alphacoders.com/421/thumb-1920-421304.jpg");
+    background-image: url("https://cdn.discordapp.com/attachments/676385980340502529/771149601356382218/image0.jpg");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
