--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
 * {
-font-family: Poppins;
-overflow: hidden;
+    font-family: Poppins;
+    overflow-x: hidden;
+
 }
 .headerimage {
-    background: url('../images/olskercupcakes.png') no-repeat  center;;
+    background: url('images/olskercupcakes.png') no-repeat  center;;
     background-size: 100%;
     height: 430px;
-    overflow: hidden;
     width: 100%;
     line-height: 25.6000003814697px
 }
@@ -19,11 +19,10 @@ body {
     width: 100%;
     background: -webkit-linear-gradient(to right, #8e2de2, #4a00e0); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    overflow-x: hidden;
 }
 
-.useremail .a{
-    float: right;
+.useremail {
+    position: relative;
     text-decoration: none;
 }
 
@@ -40,12 +39,8 @@ body {
     background: #8e2de2; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #8e2de2, #4a00e0); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    overflow: hidden;
     width: 100%;
 
-}
-.navpanel .userMail{
-    float: right;
 }
 
 .navpanel a {
@@ -68,7 +63,32 @@ body {
 }
 .headers{
     float: top;
+    position: relative;
 }
+
+.Choko{
+    border-radius: 50%;
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 270px;
+    height:270px;
+    margin: auto;
+    color: #ffffff;
+    -moz-animation: fadein 6s; /* Firefox /
+    -webkit-animation: fadein 6s; / Safari and /A
+    -o-animation: fadein 6s; / Opera */
+}
+
+.brødtekst{
+    position: relative;
+    text-align: center;
+    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .wrapper{
     width: 800px;
     height: 800px;
@@ -86,7 +106,7 @@ body {
 .bestillingBUT .topimage {
     width: 100%;
     height: 150%;
-    background: url('images/topping.jpg') no-repeat center;;
+    background: url('../images/topping.jpg') no-repeat center;;
 }
 .bestillingBUT button{
     border: none;
@@ -99,7 +119,6 @@ body {
 }
 .bestillingBUT button:hover {
     color: #6C00D8;
-    background: white;
 }
 .bestillingBUT select{
     border: none;
@@ -121,7 +140,7 @@ body {
 .bestillingTOP .topimage{
     width: 100%;
     height: 150%;
-    background: url('images/topping.jpg') no-repeat  center;;
+    background: url('/images/topping.jpg') no-repeat  center;;
 
 }
 .bestillingTOP button{
@@ -134,8 +153,7 @@ body {
     font-size: 17px;
 }
 .bestillingTOP button:hover {
-   color: #6C00D8;
-    background: white;
+    color: #6C00D8;
 }
 .bestillingTOP select{
     border: none;
