--- a/src/main/webapp/css/Productpage.css
+++ b/src/main/webapp/css/Productpage.css
@@ -2,13 +2,13 @@
 
 * {
 font-family: Poppins;
-overflow: hidden;
+
 }
 .headerimage {
     background: url('../images/olskercupcakes.png') no-repeat  center;;
     background-size: 100%;
     height: 430px;
-    overflow: hidden;
+
     width: 100%;
     line-height: 25.6000003814697px
 }
@@ -40,7 +40,6 @@ body {
     background: #8e2de2; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #8e2de2, #4a00e0); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    overflow: hidden;
     width: 100%;
 
 }
@@ -88,28 +87,10 @@ body {
     height: 150%;
     background: url('images/topping.jpg') no-repeat center;;
 }
-.bestillingBUT button{
-    border: none;
-    color: white;
-    background-color: rgba(0, 0, 0, 10);
-    padding: 12px;
-    width: 100%;
-    text-align: center;
-    font-size: 17px;
+.text{
+    padding-top: 10px;
 }
-.bestillingBUT button:hover {
-    color: #6C00D8;
-    background: white;
-}
-.bestillingBUT select{
-    border: none;
-    padding: 12px;
-    width: 100%;
-    font-size: 14px;
-}
-.bestillingBUT   p{
-    font-size: 21px;
-}
+
 .bestillingTOP{
     display: inline-block;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
@@ -124,19 +105,7 @@ body {
     background: url('images/topping.jpg') no-repeat  center;;
 
 }
-.bestillingTOP button{
-    border: none;
-    color: white;
-    background-color: rgba(0, 0, 0, 10);
-    padding: 12px;
-    width: 100%;
-    text-align: center;
-    font-size: 17px;
-}
-.bestillingTOP button:hover {
-   color: #6C00D8;
-    background: white;
-}
+
 .bestillingTOP select{
     border: none;
     padding: 12px;
@@ -144,6 +113,29 @@ body {
     font-size: 14px;
 }
 .bestillingTOP p{
+    font-size: 21px;
+}
+.Addcupcake button{
+    border: none;
+    color: white;
+    background-color: rgba(0, 0, 0, 10);
+    padding: 12px;
+    width: 20%;
+    text-align: center;
+    font-size: 17px;
+    margin-top: 20px;
+}
+.Addcupcake button:hover {
+    color: #6C00D8;
+    background: white;
+}
+.bestillingBUT select{
+    border: none;
+    padding: 12px;
+    width: 100%;
+    font-size: 14px;
+}
+.Addcupcake   p{
     font-size: 21px;
 }
 
@@ -164,24 +156,10 @@ body {
     top: -20px;
 }
 
-.bund {
-    position: relative;
-    left: 70px;
-}
 .container{
     text-align: center;
 }
 
-.dropdown-single {
-    float: left;
-    padding-bottom: 500px;
-}
-
-.dropdowns::after {
-    content: "";
-    clear: both;
-    display: table;
-}
 
 .button {
     background-color: rgb(70, 22, 110);
