--- a/src/main/webapp/css/Basket.css
+++ b/src/main/webapp/css/Basket.css
@@ -4,8 +4,9 @@
     font-family: Poppins;
     overflow-x: hidden;
 }
+
 .headerimage {
-    background: url('images/olskercupcakes.png') no-repeat  center;;
+    background: url('images/olskercupcakes.png') no-repeat center;;
     background-size: 100%;
     height: 430px;
     width: 100%;
@@ -20,7 +21,8 @@ body {
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
-.orderid{
+
+.orderid {
     padding-bottom: 25px;
 }
 
@@ -64,7 +66,8 @@ body {
     vertical-align: middle;
     color: white;
 }
-.headers{
+
+.headers {
     float: top;
     padding-bottom: 25px;
 }
@@ -76,9 +79,36 @@ body {
     margin-top: 20px;
     margin-bottom: 50px;
 }
+
 .container .header {
     position: center;
     left: 70px;
+}
+
+.orderBorder {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.orderBorder thead tr {
+    text-align: center;
+    color: #ffffff;
+    text-align: left;
+
+}
+.orderBorder th, td{
+    padding: 15px 18px;
+}
+.orderBorder tbody tr{
+    border-bottom: 2px solid #dddddd;
+}
+
+.orderBorder tbody  tbody tr.active-row{
+    border-bottom: 2px solid #ffffff;
 }
 
 .header2 {
@@ -86,20 +116,19 @@ body {
     top: -20px;
 }
 
-.container{
+.container {
     text-align: center;
 }
-.container2{
-    border-style: solid;
-    border-color: black;
-    background: -webkit-linear-gradient(to top, #8e2de2, #4a00e0); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    position: relative;
-    margin-left: 400px;
-    width: 60%;
-    color: white;
+
+.container2 {
+    margin: auto;
+    width: 490px;
+    border-bottom: 1px solid;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
-.container2 p{
+
+.container2 p {
     float: left;
     padding: 4px 4px;
     color: #f2f2f2;
@@ -108,7 +137,7 @@ body {
     font-size: 17px;
 }
 
-.ordredetalje{
+.ordredetalje {
     position: center;
 }
 
@@ -124,6 +153,7 @@ body {
     border: none;
     color: #E3E3E3;
 }
+
 .footer {
     border-top: 1px solid #000000;
     background: -webkit-linear-gradient(to top, #8e2de2, #4a00e0); /* Chrome 10-25, Safari 5.1-6 */
@@ -137,7 +167,7 @@ body {
 
 }
 
-.footer a{
+.footer a {
     float: left;
     padding: 4px 4px;
     color: #f2f2f2;
@@ -145,9 +175,11 @@ body {
     text-align: left;
     font-size: 17px;
 }
-.footer a:hover{
+
+.footer a:hover {
     color: red;
 }
-.footer .secret{
+
+.footer .secret {
     float: right;
 }
