--- a/src/main/webapp/css/Basket.css
+++ b/src/main/webapp/css/Basket.css
@@ -6,7 +6,7 @@
 }
 
 .headerimage {
-    background: url('images/olskercupcakes.png') no-repeat center;;
+    background: url('../images/olskercupcakes.png') no-repeat center;;
     background-size: 100%;
     height: 430px;
     width: 100%;
@@ -46,6 +46,18 @@ body {
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width: 100%;
 
+}
+.userChoice{
+    align-content: center;
+}
+.userChoice .btnK{
+    border: none;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 10);
+    padding: 12px;
+    width: 20%;
+    text-align: center;
+    font-size: 17px;
 }
 
 .navpanel a {
