--- a/src/main/webapp/css/Productpage.css
+++ b/src/main/webapp/css/Productpage.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
 * {
-font-family: Poppins;
+    font-family: Poppins;
+    overflow-x: hidden;
 
 }
 .headerimage {
     background: url('../images/olskercupcakes.png') no-repeat  center;;
     background-size: 100%;
     height: 430px;
-
     width: 100%;
     line-height: 25.6000003814697px
 }
@@ -19,11 +19,10 @@ body {
     width: 100%;
     background: -webkit-linear-gradient(to right, #8e2de2, #4a00e0); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    overflow-x: hidden;
 }
 
-.useremail .a{
-    float: right;
+.useremail {
+    position: relative;
     text-decoration: none;
 }
 
@@ -42,9 +41,6 @@ body {
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width: 100%;
 
-}
-.navpanel .userMail{
-    float: right;
 }
 
 .navpanel a {
@@ -67,7 +63,32 @@ body {
 }
 .headers{
     float: top;
+    position: relative;
 }
+
+.Choko{
+    border-radius: 50%;
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 270px;
+    height:270px;
+    margin: auto;
+    color: #ffffff;
+    -moz-animation: fadein 6s; /* Firefox /
+    -webkit-animation: fadein 6s; / Safari and /A
+    -o-animation: fadein 6s; / Opera */
+}
+
+.brødtekst{
+    position: relative;
+    text-align: center;
+    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .wrapper{
     width: 800px;
     height: 800px;
@@ -85,12 +106,29 @@ body {
 .bestillingBUT .topimage {
     width: 100%;
     height: 150%;
-    background: url('images/topping.jpg') no-repeat center;;
+    background: url('../images/topping.jpg') no-repeat center;;
 }
-.text{
-    padding-top: 10px;
+.bestillingBUT button{
+    border: none;
+    color: #000000;
+    background-color: rgba(0, 0, 0, 10);
+    padding: 12px;
+    width: 100%;
+    text-align: center;
+    font-size: 17px;
 }
-
+.bestillingBUT button:hover {
+    color: #6C00D8;
+}
+.bestillingBUT select{
+    border: none;
+    padding: 12px;
+    width: 100%;
+    font-size: 14px;
+}
+.bestillingBUT   p{
+    font-size: 21px;
+}
 .bestillingTOP{
     display: inline-block;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
@@ -102,10 +140,21 @@ body {
 .bestillingTOP .topimage{
     width: 100%;
     height: 150%;
-    background: url('images/topping.jpg') no-repeat  center;;
+    background: url('/images/topping.jpg') no-repeat  center;;
 
 }
-
+.bestillingTOP button{
+    border: none;
+    color: white;
+    background-color: rgba(0, 0, 0, 10);
+    padding: 12px;
+    width: 100%;
+    text-align: center;
+    font-size: 17px;
+}
+.bestillingTOP button:hover {
+    color: #6C00D8;
+}
 .bestillingTOP select{
     border: none;
     padding: 12px;
@@ -113,29 +162,6 @@ body {
     font-size: 14px;
 }
 .bestillingTOP p{
-    font-size: 21px;
-}
-.Addcupcake button{
-    border: none;
-    color: white;
-    background-color: rgba(0, 0, 0, 10);
-    padding: 12px;
-    width: 20%;
-    text-align: center;
-    font-size: 17px;
-    margin-top: 20px;
-}
-.Addcupcake button:hover {
-    color: #6C00D8;
-    background: white;
-}
-.bestillingBUT select{
-    border: none;
-    padding: 12px;
-    width: 100%;
-    font-size: 14px;
-}
-.Addcupcake   p{
     font-size: 21px;
 }
 
@@ -148,6 +174,7 @@ body {
 }
 .header {
     position: relative;
+    left: 70px;
 }
 
 .header2 {
@@ -155,10 +182,24 @@ body {
     top: -20px;
 }
 
+.bund {
+    position: relative;
+    left: 70px;
+}
 .container{
     text-align: center;
 }
 
+.dropdown-single {
+    float: left;
+    padding-bottom: 500px;
+}
+
+.dropdowns::after {
+    content: "";
+    clear: both;
+    display: table;
+}
 
 .button {
     background-color: rgb(70, 22, 110);
@@ -184,7 +225,28 @@ body {
     width: 100%;
 
 }
-
+.Addcupcake button {
+    border: none;
+    color: white;
+    background-color: rgba(0, 0, 0, 10);
+    padding: 12px;
+    width: 20%;
+    text-align: center;
+    font-size: 17px;
+    margin-top: 20px;
+}
+.button {
+    background-color: rgb(70, 22, 110);
+    margin-left: 1265px;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 20px;
+    display: inline-block;
+    cursor: pointer;
+    padding: 5px 10px;
+    border: none;
+    color: #E3E3E3;
+}
 .footer a{
     float: left;
     padding: 4px 4px;
