--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -6,7 +6,7 @@
 
 }
 .headerimage {
-    background: url('images/olskercupcakes.png') no-repeat  center;;
+    background: url('../images/olskercupcakes.png') no-repeat  center;;
     background-size: 100%;
     height: 430px;
     width: 100%;
