--- a/src/main/webapp/css/Basket.css
+++ b/src/main/webapp/css/Basket.css
@@ -21,6 +21,14 @@ body {
     background: linear-gradient(to right, #8e2de2, #4a00e0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+.userInput{
+background: black;
+    height: 100%;
+    width: 100%;
+    position: center;
+}
+
+
 
 .orderid {
     padding-bottom: 25px;
@@ -38,6 +46,10 @@ body {
 .useremail .a:hover {
     color: #6C00D8;
 }
+.Addcupcake .error-text{
+    text-align: center;
+    color: #bf1717;
+}
 
 .navpanel {
     border: 1px solid #000000;
@@ -51,6 +63,32 @@ body {
     align-content: center;
 }
 .userChoice .btnK{
+    border: none;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 10);
+    padding: 12px;
+    width: 20%;
+    text-align: center;
+    font-size: 17px;
+}
+.Addcupcake{
+    margin:auto;
+    align-content: center;
+    text-align-all: center;
+}
+.Addcupcake button {
+    margin:0px auto;
+    align-content: center;
+    border: none;
+    color: white;
+    background-color: rgba(0, 0, 0, 10);
+    padding: 12px;
+    width: 20%;
+    text-align: center;
+    font-size: 17px;
+    margin-top: 20px;
+}
+.userInput .buttonUI{
     border: none;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 10);
@@ -153,18 +191,7 @@ body {
     position: center;
 }
 
-.button {
-    background-color: rgb(70, 22, 110);
-    margin-left: 1265px;
-    margin-top: 20px;
-    text-align: center;
-    font-size: 20px;
-    display: inline-block;
-    cursor: pointer;
-    padding: 5px 10px;
-    border: none;
-    color: #E3E3E3;
-}
+
 
 .footer {
     border-top: 1px solid #000000;
