Patch til profilepage

--- a/src/main/webapp/css/ProfilePage.css
+++ b/src/main/webapp/css/ProfilePage.css
@@ -21,7 +21,7 @@ body {
 
 .topnav a {
     float: left;
-    color: #0e114f;
+    color: #f6f6f6;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
