DAB PÅ EMILS METODER

--- a/src/main/webapp/css/adminPage.css
+++ b/src/main/webapp/css/adminPage.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url("https://wallpaperaccess.com/full/10914.jpg");
+    background-image: url("https://images4.alphacoders.com/882/882175.jpg");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
