--- a/src/main/webapp/css/adminPage.css
+++ b/src/main/webapp/css/adminPage.css
@@ -4,11 +4,12 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url("https://images4.alphacoders.com/882/882175.jpg");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    margin: 0px 55px 0px 0px;
+    height: 100vh;
+    width: 100%;
+    background: -webkit-linear-gradient(to right, #8e2de2, #9800ea); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8e2de2, #641eae); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 h1{
     color: white;
